# feray

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  yamllintconfig.yaml
.github/: pull_request_template.md
.github/workflows/: docs.yaml  library.yaml  pr-title-from-branch.yaml  tutorial.yaml
docs/: README.md  docusaurus.config.ts  package.json  paper.bib  paper.md  sidebars.ts
docs/docs/api/: api_core.md  api_dagster.md  api_feray_polars.md  api_feray_sql.md
docs/docs/api/.doctrees/: api_core.doctree  api_dagster.doctree  api_feray_polars.doctree  api_feray_sql.doctree  environment.pickle  index.doctree
docs/docs/contributing/: contributing.md  release.md
docs/sphinx/source/: api_core.rst  api_dagster.rst  api_feray_polars.rst  api_feray_sql.rst  conf.py  index.rst
examples/: Makefile  README.md  key.txt  public-age-keys.txt  pyproject.toml  workspace.yaml
examples/dagster_feray_example/: __init__.py  definitions.py  demo_standalone.py
examples/dagster_feray_example/defs/: shared.py
examples/dagster_feray_example/defs/features/: feature_example.py
examples/dagster_feray_example/defs/ray/: ray_external.py  ray_integration.py
examples/dagster_feray_example/resources/: __init__.py  lazy_local_ray.py
examples/dagster_feray_example_tests/: test_defs_load.py
examples/scripts/: secops_config.sh
projects/dagster-feray/: README.md  pyproject.toml
projects/dagster-feray/dagster_feray/: api.py  resources.py
projects/feray/: README.md  pyproject.toml
projects/feray-polars/: README.md  pyproject.toml
projects/feray-polars/feray_polars/: utils.py
projects/feray-polars/feray_polars/dummy/: in_memory_metadata.py  parquet_store.py
projects/feray-rdbms/: README.md  pyproject.toml
projects/feray-sql/: README.md  pyproject.toml
projects/feray-sql/feray_sql/: __init__.py
projects/feray-sql/feray_sql_test/: dummy_test.py
projects/feray/feray/: api.py  calculator.py  data_structures.py  protocols.py  service.py
