[project]
name = "feray-workspace"
version = "0.1.1"
description = "Workspace root - not published"
readme = "README.md"
authors = [
    { name = "danielgafni", email = "danielgafni16@gmail.com" },
    { name = "geoheil", email = "georg.kf.heiler@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[tool.uv]
package = false 

[tool.uv.workspace]
members = ["projects/*"]

[build-system]
requires = ["uv_build>=0.7.20,<0.8.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pyrefly>=0.23.1",
    "ruff>=0.12.3",
]
