[project]
name = "feray-workspace"
version = "0.0.0-rc.1"
description = "Workspace root - not published"
readme = "README.md"
authors = [
  { name = "danielgafni", email = "danielgafni16@gmail.com" },
  { name = "geoheil", email = "georg.kf.heiler@gmail.com" },
]
requires-python = ">=3.12,<3.13"
dependencies = []

[tool.uv]
package = false

[tool.uv.workspace]
members = ["projects/*"]

[build-system]
requires = ["uv_build>=0.8.8,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
  "yamllint>=1.35.1,<2",
  "taplo>=0.9.3,<0.10",
  "pytest>=8.3.4,<9",
  "pytest-mock>=3.14.0,<4",
  "pytest-cov~=6.0.0",
  "ruff>=0.12.8,<1",
  "pyrefly>=0.28.0,<1",
  "python-semantic-release~=10.3.1",
  "commitizen~=4.8.3",
]

[tool.pixi.project]
platforms = ["linux-64", "osx-arm64", "osx-64", "linux-aarch64", "win-64"]
channels = ["conda-forge"]

[tool.pixi.environments]
build = { features = ["build"], solve-group = "build" }

docs = { features = ["docs"], solve-group = "docs" }

[tool.pixi.feature.build.pypi-dependencies]
uv = ">=0.8.8"
build = ">=1.3.0"

[tool.pixi.feature.docs]
channels = ["conda-forge", "https://prefix.dev/brads-forge"]
[tool.pixi.feature.docs.dependencies]
nodejs = "~=24.4.1"
bun = "~=1.2.19"
sphinx = "~=8.2.3"
[tool.pixi.feature.docs.pypi-dependencies]
sphinx-rtd-theme = "~=3.0.2"
myst-parser = "~=4.0.1"
sphinx-markdown-builder = ">=0.6.8,<1"
feray = { path = "./projects/feray", editable = true }
dagster-feray = { path = "./projects/dagster-feray", editable = true }

[tool.pixi.feature.build.tasks]
clean-lib = { cmd = "uv clean", cwd = "projects" }
release = { cmd = "uv run semantic-release publish", description = "Make new release" }

fmt = { cmd = "uv run -- ruff format projects && uv run -- yamllint -c yamllintconfig.yaml projects && uv run -- taplo fmt", description = "Format" }
lint = { cmd = "uv run -- ruff check projects && uv run -- yamllint -c yamllintconfig.yaml projects && uv run -- taplo check && uv run -- pyrefly check projects", description = "Lint" }
test = { cmd = "uv run -- pytest projects", description = "Run all unit tests" }

[tool.pixi.feature.build.tasks.sync]
cmd = "uv sync --all-packages"
description = "uv sync"

[tool.pixi.feature.build.tasks.sync-lib-with-upgrade]
cmd = "uv sync --all-packages --upgrade"
description = "uv sync with upgrade"

[tool.pixi.feature.build.tasks.build-lib]
cmd = "uv build --all-packages"
cwd = "projects"
depends-on = ["clean-lib"]
description = "Cleanly build the library"

[tool.pixi.feature.build.tasks.publish-lib]
cmd = "uv publish --token $PYPI_TOKEN"
depends-on = ["build-lib"]
description = "Publish the library"

[tool.pixi.tasks.pre-commit-install]
cmd = "pre-commit install"
description = "install pre-commit hooks"

[tool.pixi.tasks.pre-commit-run]
cmd = "pre-commit run --all-files"
description = "run pre-commit on all files"

[tool.pixi.tasks.start]
cwd = "examples"
cmd = "pixi run -e dev --frozen start"
description = "Start example"

[tool.pixi.feature.docs.tasks.docs-install]
cmd = "bun install"
cwd = "docs"

[tool.pixi.feature.docs.tasks.docs-build-python-api]
cmd = "bun run build:api"
cwd = "docs"
[tool.pixi.feature.docs.tasks.docs-serve]
cmd = "bun run start"
cwd = "docs"
depends-on = ["docs-install", "docs-build-python-api"]
description = "Serve docs locally"

[tool.pixi.feature.docs.tasks.docs-build]
cmd = "bun run build"
cwd = "docs"
depends-on = ["docs-install", "docs-build-python-api"]
description = "Build docs for serving"

[tool.commitizen]
name = "cz_conventional_commits"
version_provider = "pep621"
update_changelog_on_bump = false
tag_format = "v$version"

[tool.semantic_release]
version_toml = [
  "pyproject.toml:project.version",
  "projects/feray/pyproject.toml:project.version",
  "projects/dagster-feray/pyproject.toml:project.version",
]
build_command = "pixi update feray && pixi update dagster-feray && uv sync --all-packages && pixi run -e build --frozen build-lib && git add pixi.lock uv.lock"
commit_message = "{version} [skip ci]\n\nAutomatically generated by python-semantic-release"

[tool.semantic_release.commit_parser_options]
parse_squash_commits = true

[tool.semantic_release.branches.main]
match = "(main)"
