[project]
name = "feray"
version = "0.1.1"
description = "Memoization-enabled feature store on ray"
readme = "README.md"
authors = [
    { name = "danielgafni", email = "danielgafni16@gmail.com" },
    { name = "geoheil", email = "georg.kf.heiler@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "ibis>=3.3.0",
    "polars>=1.31.0",
    "polars-hash>=0.5.4",
    "sqlmodel>=0.0.24",
]

[project.optional-dependencies]
ray = [
    "ray>=2.47.1",
]

[tool.uv.build-backend]
module-root = ""

[build-system]
requires = ["uv_build>=0.8.6,<0.9"]
build-backend = "uv_build"
